src/main/kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: openliberty-starter-app
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: openliberty-starter-app
    app.kubernetes.io/managed-by: open-liberty-operator
    app.kubernetes.io/name: openliberty-starter-app
    app.kubernetes.io/part-of: openliberty-starter-app
    app.kubernetes.io/version: 1.0.0
    apps.openliberty.io/name: openliberty-starter-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: openliberty-starter-app
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backend
        app.kubernetes.io/instance: openliberty-starter-app
        app.kubernetes.io/managed-by: open-liberty-operator
        app.kubernetes.io/name: openliberty-starter-app
        app.kubernetes.io/part-of: openliberty-starter-app
        app.kubernetes.io/version: 1.0.0
        apps.openliberty.io/name: openliberty-starter-app
      annotations:
        libertyOperator: Open Liberty
    spec:
      restartPolicy: Always
      serviceAccountName: openliberty-starter-app
      schedulerName: default-scheduler
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: openliberty-starter-app
                topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources: {}
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9080
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 12
          terminationMessagePath: /dev/termination-log
          name: app
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9080
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 12
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsNonRoot: true
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
          ports:
            - name: 9443-tcp
              containerPort: 9443
              protocol: TCP
          imagePullPolicy: Always
          # volumeMounts:
          #   - name: svc-certificate
          #     readOnly: true
          #     mountPath: /etc/x509/certs
          terminationMessagePolicy: File
          image: 'quay.io/rafaeltuelho/openliberty-starter-app-test:latest'
      serviceAccount: openliberty-starter-app
      # volumes:
      #   - name: svc-certificate
      #     secret:
      #       secretName: openliberty-starter-app-svc-tls-ocp
      #       defaultMode: 420
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
