src/main/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: openliberty-starter-app
  namespace: openliberty-sandbox
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: openliberty-starter-app
    app.kubernetes.io/managed-by: open-liberty-operator
    app.kubernetes.io/name: openliberty-starter-app
    app.kubernetes.io/part-of: openliberty-starter-app
    app.kubernetes.io/version: 1.0.0
    apps.openliberty.io/name: openliberty-starter-app
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 9443-tcp
      protocol: TCP
      port: 9443
      targetPort: 9443
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/instance: openliberty-starter-app
