src/main/kubernetes/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: openliberty-starter-app
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: openliberty-starter-app
    app.kubernetes.io/managed-by: open-liberty-operator
    app.kubernetes.io/name: openliberty-starter-app
    app.kubernetes.io/part-of: openliberty-starter-app
    app.kubernetes.io/version: 1.0.0
    apps.openliberty.io/name: openliberty-starter-app
spec:
  path: /
  to:
    kind: Service
    name: openliberty-starter-app
    weight: 100
  port:
    targetPort: 9443-tcp
  tls:
    termination: reencrypt
  wildcardPolicy: None
